tests/errors/backend/unknown_impl.fpcore
(FPCore (x)
 :calyx-domain (-1.5708 1.5708)
 (sin x))
